# python08

./: contruct.py
ex0/: construct.py
ex1/: loading.py  pyproject.toml  requirements.txt
ex2/: .env.exemple  oracle.py
