[project]
name = "loading"
version = "0.1.0"
description = "Using numpy, panda, matplotlib to generate a visualization of a graph"
authors = [
    {name = "Nicodeme Verdier"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
